--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fortune_docker",
+  "name": "Fortune Site Demo",
   "version": "1.0.0",
   "description": "A funny fortune telling website with a cuttlefish fortune teller",
   "main": "index.js",
@@ -8,11 +8,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@hookform/devtools": "^2.2.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@webpack-cli/serve": "^1.1.0",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -24,34 +26,55 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-comments": "^1.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "lint-staged": "^10.5.4",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "prettier": "^2.2.1",
+    "react-refresh": "^0.10.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "source-map-loader": "^1.1.3",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-a11y": "^1.2.3",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-scss": "^3.19.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.3",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-bundle-tracker": "^1.0.0-alpha.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^3.0.0"
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-merge": "^5.7.3"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack serve --config webpack.dev.js --mode development --watch"
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "lint": "eslint --fix \"./frontend/src/**/*.{js,jsx,json}\"; exit 0",
+    "stylelint": "stylelint --fix \"**/*.scss\" --config stylelint.config.js; exit 0",
+    "format": "prettier --write \"./frontend/src/**/*.{js,jsx,json,css,scss,md}\"",
+    "dev": "webpack serve --config webpack/webpack.dev.js --mode development --watch"
   },
   "engines": {
     "node": "14.11.0",
-    "yarn": "1.22.5"
+    "yarn": "^1.22.10"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -75,6 +98,14 @@
     "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.7"
   },
+  "keywords": [
+    "Cuttlefish",
+    "Cephlapod",
+    "Fortune",
+    "Fortune Teller",
+    "Underwater Fortune Teller",
+    "Demo Project"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
