--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,19 @@
 {
-  "presets": [
-      "@babel/preset-env", "@babel/preset-react"
-  ],
-  "plugins": [
-        "transform-class-properties"
-  ]
+    "presets": [
+        "@babel/preset-env",
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ]
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "regenerator": true
+            }
+        ]
+    ]
 }
